# pseudocode

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  release.yml
Testing/Temporary/: CTestCostData.txt
benchmarks/: BASELINE_TREEWALK.md  README.md  run_benchmarks.py  sieve.js  sieve.py  sieve.scsa
cmake/: GetGitVersion.cmake
docs/: architecture.md  language.md
examples/: array_error.scsa  binary_search_tree.scsa  boolean.scsa  breaker.scsa  bubble.scsa  class.scsa  class2.scsa  elseif.scsa  gcd_lcm.scsa  graph_bfs.scsa  input.scsa  negamax.scsa  quick_sort.scsa  quiz.scsa  selection_sort.scsa  test.scsa  tictactoe.scsa
examples/benchmark/: bench.py  bench.scsa
src/: ast.hpp  ast_printer.cpp  ast_printer.hpp  chunk.cpp  chunk.hpp  compiler.cpp  compiler.hpp  errors.cpp  errors.hpp  input_buffer.cpp  input_buffer.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  main.hpp  opcodes.hpp  parser.cpp  parser.hpp  runtime.cpp  runtime.hpp  token.hpp  version.hpp.in  vm.cpp  vm.hpp
tests/: coverage.py  tester.py
tests/arrays/: array_in_operator.scsa  array_iteration.scsa  array_methods.scsa  array_multiply.scsa  array_simple.scsa  array_slice.scsa  array_slice_boundaries.scsa  array_slice_ensure_shallow.scsa  arrays_simple.scsa  reference_equality.scsa
tests/case-statement/: execution.scsa  expression_in_condition.scsa  multiline_block.scsa  multiple_values.scsa  otherwise.scsa
tests/classes/: calculator.scsa  class_mutable_defaults.scsa  inheritance_constructors.scsa  inheritance_fields.scsa  inheritance_methods.scsa  inheritance_multi_level.scsa  inheritance_polymorphism.scsa  object_passed_by_reference.scsa  test_class_state.scsa  test_self_call.scsa
tests/complex-cases/: binary_search_tree.scsa  bubble_sort.scsa  bubble_sort_new.scsa  bubble_sort_old.scsa  linked_list.scsa  quick_sort.scsa  rpg_combat.scsa
tests/control-flow/: else_if.scsa  if.scsa
tests/dictionaries/: dict_bool_keys.scsa  dict_empty.scsa  dict_in_operator.scsa  dict_iteration.scsa  dict_methods.scsa  dict_mixed_keys.scsa  dict_nested.scsa  dict_reference_equality.scsa  dict_remove.scsa  dict_simple.scsa
tests/functions/: early_return.scsa  factorial.scsa  fibonacci.scsa  higher_order_funcs.scsa  local_shadows_global.scsa  multi_arg.scsa  odd_even_recursion.scsa  physics_freefall.scsa  scope.scsa
tests/lexing-errors/: exclamation.scsa  identifier_starts_with_number.scsa  unexpected_char_1.scsa  unexpected_char_2.scsa  unexpected_character_3.scsa  unexpected_character_4.scsa  unterminated_1.scsa  unterminated_2.scsa
tests/loops/: for_in_1.scsa  for_in_2.scsa  for_in_scope.scsa  for_nested_scopes.scsa  for_to_1.scsa  for_to_2.scsa  loop_conditional_local.scsa  repeat_until_1.scsa  repeat_until_2.scsa  while_1.scsa  while_2.scsa  while_3.scsa
tests/operator-precedence/: assign_tests.scsa  call_tests.scsa  logic_tests.scsa  modulo_tests.scsa  parens_tests.scsa  primary_school.scsa
tests/parsing-errors/: array_missing_close.scsa  array_trailing_comma.scsa  class_missing_end_name.scsa  class_name_mismatch.scsa  dict_missing_close.scsa  dict_missing_colon.scsa  dict_missing_key.scsa  empty_subscript.scsa  for_bad_variable.scsa  for_invalid_connector.scsa  for_missing_in.scsa  for_missing_to.scsa  for_to_bad_variable.scsa  for_to_missing_end.scsa  for_wrong_footer.scsa  func_missing_end_name.scsa  func_name_mismatch.scsa  if_missing_end.scsa  if_missing_then.scsa  if_wrong_footer.scsa  invalid_assign_1.scsa  invalid_assignment_2.scsa  invalid_assignment_3.scsa  mismatch_nested.scsa  new_missing_class.scsa  new_missing_lparen.scsa  new_missing_rparen.scsa  repeat_missing_condition.scsa  repeat_missing_until.scsa  unclosed_bracket.scsa  unclosed_nested.scsa  unclosed_subscript.scsa  until_without_repeat.scsa  while_missing_end.scsa  while_wrong_footer.scsa
tests/runtime-errors/: add_bool_float.scsa  add_int_string.scsa  add_string_int.scsa  array_out_of_bounds_1.scsa  array_out_of_bounds_2.scsa  array_slice_bad_index.scsa  call_an_int.scsa  class_instantiation.scsa  class_wrong_arity_1.scsa  class_wrong_arity_2.scsa  cyclic_inheritance.scsa  dict_assign_invalid_key.scsa  dict_get_wrong_arity.scsa  dict_invalid_key_type.scsa  dict_invalid_property.scsa  dict_key_not_found.scsa  dict_remove_invalid_key.scsa  divide_by_zero.scsa  divide_int_by_string.scsa  divide_string_by_int.scsa  for_in_invalid_iterable_dict.scsa  for_to_non_integer_1.scsa  for_to_non_integer_2.scsa  in_dict_key_type_error.scsa  in_operator_must_be_list.scsa  in_operator_must_be_list_or_dict.scsa  in_string_non_string_bool.scsa  in_string_non_string_float.scsa  in_string_non_string_int.scsa  index_into_float.scsa  (+24 more)
vscode/: LICENSE  README.md  language-configuration.json  package.json
(+21 files in other folders)
